crates/parser/src/tests/snapshots/call_nullary.snap
---
source: crates/parser/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- a()
- Ok:
    nodes:
      - Call:
          name: a
          args: []
- (a)

