crates/parser/src/tests/snapshots/extern_err.snap
---
source: crates/parser/src/tests.rs
assertion_line: 87
expression: "(test[1], ast, ast_string)"
---
- "extern cos(x: float)"
- Err:
    message: "Expecting `fn` after `extern`"
    line: 1
    column: 8
- "Expecting `fn` after `extern` at 1:8"

