crates/parser/src/tests/snapshots/for_bad_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 103
expression: "(test[1], ast, ast_string)"
---
- for
- Err:
    message: "Expecting identifier in `for` typed declaration. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting identifier in `for` typed declaration. Got `EOF`"

