crates/parser/src/tests/snapshots/for_bad_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 101
expression: "(test[1], ast, ast_string)"
---
- for a
- Err:
    message: "Expecting `:` after identifier in `for` typed declaration. Got `EOF`"
    line: 0
    column: 0
- "Expecting `:` after identifier in `for` typed declaration. Got `EOF`"

