crates/parser/src/tests/snapshots/for_bad_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 103
expression: "(test[1], ast, ast_string)"
---
- "for a:"
- Err:
    message: "Expecting type annotation in `for`. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting type annotation in `for`. Got `EOF`"

