crates/parser/src/tests/snapshots/for_bad_4.snap
---
source: crates/parser/src/tests.rs
assertion_line: 103
expression: "(test[1], ast, ast_string)"
---
- "for a: int"
- Err:
    message: "Expecting '=' after identifer. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting '=' after identifer. Got `EOF`"

