crates/parser/src/tests/snapshots/for_bad_5.snap
---
source: crates/parser/src/tests.rs
assertion_line: 106
expression: "(test[0], ast, ast_string)"
---
- "for a: int ="
- Err:
    message: Premature end of expression
    line: 0
    column: 0
- "Parsing error: Premature end of expression"

