crates/parser/src/tests/snapshots/for_bad_6.snap
---
source: crates/parser/src/tests.rs
assertion_line: 103
expression: "(test[1], ast, ast_string)"
---
- "for a: int = 1"
- Err:
    message: "Expecting ';' after start. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting ';' after start. Got `EOF`"

