crates/parser/src/tests/snapshots/func_def_bad_11.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "fn a(a: int,"
- Err:
    message: "Expecting `{` to start block. Got `EOF`"
    line: 0
    column: 0
- "Expecting `{` to start block. Got `EOF`"

